--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,23 +1,15 @@
 ﻿@{
 }
 
-@model BookListViewModel
+@model BooksViewModel
 
 <h1>Welcome to the Chill Zone (Imagine TM symbol here)</h1>
 
-@foreach (Books b in Model.BookList)
+@foreach (Book b in Model.Books)
 {
-    <h4>@b.Title</h4>
-    <h6 style="font-style: italic">@b.Author</h6>
-
-    <ul>
-        <li>ISBN: @b.Isbn</li>
-        <li>Publisher: @b.Publisher</li>
-        <li>Classification: @b.Classification</li>
-        <li>Category: @b.Category</li>
-        <li>Number of Pages: @b.PageCount</li>
-        <li>Price: @b.Price</li>
-    </ul>
+    <partial name="BookSummary" model="b" />
 }
 
-<div page-iter="@Model.PageInfo" page-action="Index"></div>
+<div page-iter="@Model.PageInfo" page-action="Index" page-class="btn"
+     page-class-normal="btn-outline-dark" page-class-selected="btn-primary" page-classes-enabled="true"
+     class="btn-group float-end m-1"></div>
