--- a/Pages/Purchase.cshtml
+++ b/Pages/Purchase.cshtml
@@ -23,7 +23,7 @@
                 <td>@i.Book.Title</td>
                 <td>@i.Quantity</td>
                 <td>@i.Book.Price</td>
-                <td>@(i.Quantity * 25)</td>
+                <td>@(i.Quantity * i.Book.Price)</td>
             </tr>
         }
     </tbody>
@@ -31,12 +31,12 @@
     <tfoot>
         <tr>
             <td colspan="3">Total:</td>
-            <td>@Model.basket.CalculateTotal().ToString("c")</td>
+            <td>@Model.cart.CalculateTotal().ToString("c")</td>
         </tr>
     </tfoot>
 
 </table>
 
 <div>
-    <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Donating</a>
+    <a class="btn btn-primary" href="@Model.ReturnUrl">Continue Shopping</a>
 </div>
