--- a/Views/Shared/Components/Types/Default.cshtml
+++ b/Views/Shared/Components/Types/Default.cshtml
@@ -4,11 +4,11 @@
 @model IEnumerable<string>
 
 <div class="d-grid gap-2">
-    <a asp-controller="Home" asp-action="Index" asp-route-projectType="" asp-route-pageNum="1" class="btn btn-outline-secondary">Home</a>
+    <a asp-controller="Home" asp-action="Index" asp-route-category="" asp-route-pageNum="1" class="btn btn-outline-secondary">Home</a>
 
     @foreach (string t in Model)
     {
-        <a asp-controller="Home" asp-action="Index" asp-route-projectType="@t" asp-route-pageNum="1"
+        <a asp-controller="Home" asp-action="Index" asp-route-category="@t" asp-route-pageNum="1"
            class="btn @(ViewBag.SelectedType == t ? "btn-primary" : "btn-outline-secondary")">@t</a>
     }
 </div>
