--- a/Views/Order/Checkout.cshtml
+++ b/Views/Order/Checkout.cshtml
@@ -6,7 +6,7 @@
 <h2>Check out now</h2>
 <p>Please enter your shipping information below.</p>
 
-<form method="post">
+<form method="post" asp-action="Checkout" asp-controller="Donation">
 
     <h4>Ship To</h4>
 
