--- a/Views/Order/Checkout.cshtml
+++ b/Views/Order/Checkout.cshtml
@@ -6,7 +6,9 @@
 <h2>Check out now</h2>
 <p>Please enter your shipping information below.</p>
 
-<form method="post" asp-action="Checkout" asp-controller="Donation">
+<form method="post" asp-action="Checkout" asp-controller="Order">
+
+    <div asp-validation-summary="All" class="text-danger"></div>
 
     <h4>Ship To</h4>
 
