--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,8 +13,17 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col navbar-brand">Chill Zone</div>
-                <div class="col-6 text-end">
-                    <vc:cart-summary></vc:cart-summary>
+                <div class="col-6">
+                    <div class="row">
+
+                        <div class="col-11 text-end">
+                            <vc:cart-summary></vc:cart-summary>
+                        </div>
+                        <div class="col-1">
+                            <a class="btn btn-sm btn-primary" asp-controller="Account" asp-action="Login">Admin</a>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
